<resources>
    <string name="app_name">Wiber Driver</string>
    <string name="phone_number_label">Phone number</string>
    <string name="email_address_label">Email address</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="signin_label">Sign in</string>
    <string name="create_account_label">Create an account</string>
    <string name="sign_up_label">Sign up</string>
    <string name="sign_up_fb_label">Sign up with facebook</string>
    <string name="sign_up_google_label">Sign up with google</string>
    <string name="already_has_an_account_label">Already has an account?</string>
    <string name="confirm_taxi">Confirm Taxi</string>
    <string name="confirm">Confirm</string>
    <string name="menu_home">Home</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="offline_status">Offline</string>
    <string name="online_status">Online</string>
    <string name="closeNavDrawer">Close Navigation Drawer</string>
    <string name="openNavDrawer">Open Navigation Drawer</string>
    <string name="choose_payment_method">Select Payment</string>
    <string name="enter_promo_code">Promo Code</string>
    <string name="thank_you">Thank You \n For Your Confirmation!</string>
    <string name="confirm_request_question">Confirm?</string>
    <string name="name">Name</string>
    <string name="card_number">Card Number</string>
    <string name="since_date">Since Date</string>
    <string name="submit">Submit</string>
    <string name="add_new_payment_method">Add New Payment Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="name_label">Name</string>
    <string name="new_password">New password</string>
    <string name="total_balance">Total Balance</string>
    <string name="seats4">4 seats</string>
    <string name="seats7">7 seats</string>Pick customer
    <string name="pick_customer">Pick customer</string>
    <string name="finish_request">Finish request</string>

    <string name="thank_you_finish_trip">Trip is finished</string>
</resources>