<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    android:id="@+id/drawer_layout">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.WiberDriver.AppBarOverlay"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white"
                android:background="@color/primary"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="Profile"
                app:popupTheme="@style/Theme.WiberDriver.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_height="match_parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/avaProfile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/account_avatar"
            android:layout_centerHorizontal="true"
            app:civ_shadow="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/avaProfile"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="-50dp"
            android:layout_toEndOf="@+id/avaProfile"
            app:backgroundTint="@color/primary"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/avaProfile"
            android:id="@+id/name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/primary_color"
            android:hint="@string/name_label"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/name_input_layout"
            android:id="@+id/phone_number_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/primary_color"
            android:hint="@string/phone_number_label"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/black">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/phone_number_input_layout"
            android:id="@+id/new_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/primary_color"
            android:hint="@string/new_password"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_below="@+id/new_password_input_layout"
            android:id="@+id/chooseCarTypeGroup"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:checkedButton="@+id/seats4Type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/seats4Type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                app:buttonTint = "@color/primary_color"
                android:textSize="17dp"
                android:layout_marginRight="30dp"
                android:textStyle="bold"
                android:text="@string/seats4"/>
            <RadioButton
                android:id="@+id/seats7Type"
                android:textSize="17dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:textColor="@color/black"
                app:buttonTint = "@color/primary_color"
                android:textStyle="bold"
                android:text="@string/seats7"/>
        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chooseCarTypeGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/primary_color"
            android:text="Save"
            android:textSize="22dp" />

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>